# ArmorStand_OSC

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  build.gradle.kts  maven_install.json  properties.bzl  render_schedule.md  settings.gradle.kts
blazerod/: BUILD.bazel
blazerod/example/ball_block/: BUILD.bazel
blazerod/example/ball_block/src/main/resources/: ball.glb  fabric.mod.json
blazerod/example/compute/: BUILD.bazel
blazerod/example/compute/src/main/resources/: fabric.mod.json
blazerod/model/: BUILD.bazel
blazerod/model/model-base/: BUILD.bazel
blazerod/model/model-base/src/main/resources/: fabric.mod.json
blazerod/model/model-formats/: BUILD.bazel
blazerod/model/model-formats/src/main/resources/: fabric.mod.json
blazerod/model/model-gltf/: BUILD.bazel
blazerod/model/model-gltf/src/main/resources/: fabric.mod.json
blazerod/model/model-gltf/src/test/resources/: BUILD.bazel  LICENSE  armorstand.vrm
blazerod/model/model-pmd/: BUILD.bazel
blazerod/model/model-pmd/src/main/resources/: fabric.mod.json
blazerod/model/model-pmx/: BUILD.bazel
blazerod/model/model-pmx/src/main/resources/: fabric.mod.json
blazerod/model/model-vmd/: BUILD.bazel
blazerod/model/model-vmd/src/main/resources/: fabric.mod.json
blazerod/render/: BUILD.bazel
blazerod/render/src/main/kotlin/top/fifthlight/armorstand/: BlazeRod.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/: BlazeRod.kt
blazerod/render/src/main/resources/: blazerod.accesswidener  blazerod.mixins.json  fabric.mod.json
blazerod/src/main/kotlin/top/fifthlight/blazerod/: Dummy.kt
blazerod/src/main/resources/: fabric.mod.json
game/: BUILD.bazel
mod/: BUILD.bazel  build.gradle.kts
mod/src/client/java/top/fifthlight/armorstand/extension/: BufferTypeExt.java  GpuDeviceExt.java  PlayerEntityRenderStateExt.java  RenderPassExt.java  RenderPipelineBuilderExt.java  RenderPipelineExt.java  RenderPipelineSnippetExt.java  TextureFormatExt.java
mod/src/client/java/top/fifthlight/armorstand/helper/: GlStateManagerHelper.java  RenderObjectHelper.java
mod/src/client/java/top/fifthlight/armorstand/mixin/: BufferTypeMixin.java  CameraMixin.java  EntityRenderDispatcherMixin.java  FrustumMixin.java  GameRendererMixin.java  MinecraftClientMixin.java  MouseMixin.java  PlayerEntityRenderStateMixin.java  PlayerEntityRendererMixin.java  PlayerModelMixin.java  RenderObjectMixin.java  RenderPipelineBuilderMixin.java  RenderPipelineMixin.java  RenderPipelineSnippetMixin.java  ShaderProgramMixin.java
mod/src/client/kotlin/top/fifthlight/armorstand/: ArmorStandClient.kt  ArmorStandModMenuImpl.kt  PlayerRenderer.kt
mod/src/client/kotlin/top/fifthlight/armorstand/animation/: AnimationChannelItem.kt  AnimationLoader.kt  KeyFrameData.kt  KeyFrameIndexer.kt  Timeline.kt
mod/src/client/kotlin/top/fifthlight/armorstand/config/: ConfigScreen.kt  GlobalConfig.kt
mod/src/client/kotlin/top/fifthlight/armorstand/debug/: ModelManagerDebugFrame.kt  ObjectCountTrackerFrame.kt  ObjectPoolTracker.kt  ResourceCountTrackerFrame.kt
mod/src/client/kotlin/top/fifthlight/armorstand/event/: ScreenEvents.kt
mod/src/client/kotlin/top/fifthlight/armorstand/extension/: GpuDeviceExt.kt  NativeImageExt.kt  RenderObjectExt.kt  RenderPassExt.kt  RenderPipelineBuilderExt.kt  RenderPipelineExt.kt  RenderPipelineSnippetExt.kt
mod/src/client/kotlin/top/fifthlight/armorstand/manage/: AnimationItem.kt  ModelItem.kt  ModelManager.kt
mod/src/client/kotlin/top/fifthlight/armorstand/model/: InstanceDataBuffer.kt  MergedSkinData.kt  ModelInstance.kt  ModelLoader.kt  RenderExpression.kt  RenderMaterial.kt  RenderMesh.kt  RenderNode.kt  RenderPrimitive.kt  RenderScene.kt  RenderSkinData.kt  RenderTask.kt  RenderTexture.kt  TargetIndicesBuffer.kt  TargetWeightsBuffer.kt
mod/src/client/kotlin/top/fifthlight/armorstand/render/: GpuTextureBuffer.kt  IndexBuffer.kt  RefCountedGpuBuffer.kt  RefCountedGpuTexture.kt  TextureBufferFormat.kt  VertexBuffer.kt
mod/src/client/kotlin/top/fifthlight/armorstand/state/: AnimationSet.kt  ClientModelPathManager.kt  ExpressionController.kt  ModelController.kt  ModelHashManager.kt  ModelInstanceManager.kt  NetworkModelSyncer.kt
mod/src/client/kotlin/top/fifthlight/armorstand/std140/: Std140Layout.kt
mod/src/client/kotlin/top/fifthlight/armorstand/util/: BitmapItem.kt  ByteChannelUtil.kt  CeilDiv.kt  ConnectionExt.kt  ConnectionPool.kt  (+12 more)
mod/src/client/resources/: armorstand.mixins.client.json
mod/src/client/resources/assets/armorstand/lang/: en_us.json  zh_cn.json
mod/src/main/kotlin/top/fifthlight/armorstand/: ArmorStand.kt  ArmorStandServer.kt  ModelHolder.kt  PlayerRenderer.kt
mod/src/main/resources/: armorstand.accesswidener  armorstand.mixins.json  fabric.mod.json
mod/src/main/resources/assets/armorstand/lang/: zh_cn.json
model/: BUILD.bazel
model/model-base/: BUILD.bazel  build.gradle.kts
model/model-gltf/: BUILD.bazel  build.gradle.kts
model/model-gltf/src/test/resources/: BUILD.bazel  LICENSE
model/model-pmd/: BUILD.bazel  build.gradle.kts
model/model-pmx/: BUILD.bazel  build.gradle.kts
model/model-pmx/src/test/: README
model/model-vmd/: BUILD.bazel  build.gradle.kts
model/model-vmd/src/test/: README
modmenu/: modmenu.BUILD.bazel
modmenu/patches/: descrption-list-widget.patch  drawing-util.patch  http-util.patch  legacy-textured-button-widget.patch  mod-list-entry.patch  mod-list-widget.patch  mods-screen.patch  parent-entry.patch  text-render-mixin.patch  update-avaliable-badge.patch  update-checker-util.patch
rule/access_widener_extractor/: AccessWidenerExtractor.kt  BUILD.bazel  FabricModJson.kt
rule/access_widener_transformer/: AccessWidenerTransformer.java  BUILD.bazel
rule/jij_merger/: BUILD.bazel  FabricModJson.kt  JarInJarMerger.kt  NestedJarEntry.kt
rule/mapping_merger/: BUILD.bazel  MappingMerger.java
rule/tiny_remapper_worker/: AccessWidenerRemapper.kt  BUILD.bazel  JarInJarRemover.kt  MappingManager.kt  PrintLogger.kt  TinyRemapperWorker.kt  WorkRequest.kt  WorkResponse.kt
rule/upload_modrinth/: BUILD.bazel  upload_modrinth.mjs
(+523 files in other folders)
