"ArmorStand module file"

module(
    name = "armorstand",
    version = "0.0.1+dev",
)

game_version = "1.21.8"

bazel_dep(name = "rules_java", version = "8.12.0")
bazel_dep(name = "rules_kotlin", version = "2.1.4")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "aspect_rules_js", version = "2.3.7")
bazel_dep(name = "rules_nodejs", version = "6.4.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # mapping
        "net.fabricmc:yarn:1.21.8+build.1:v2",
        "net.fabricmc:intermediary:%s:v2" % game_version,

        # build dependencies
        "net.fabricmc:tiny-remapper:0.11.1",
        "net.fabricmc:mapping-io:0.7.1",
        "net.fabricmc:mapping-io-extras:0.7.1",
        "net.fabricmc:access-widener:2.1.0",
        "org.ow2.asm:asm:9.8",
        "org.ow2.asm:asm-commons:9.8",
        "org.vineflower:vineflower:1.11.1",

        # mod dependencies
        "net.fabricmc:fabric-loader:0.16.14",
        "com.terraformersmc:modmenu:15.0.0-beta.3",
        "net.fabricmc.fabric-api:fabric-api:0.129.0+1.21.8",
        "net.fabricmc:fabric-language-kotlin:1.11.0+kotlin.2.0.0",
        "net.fabricmc:sponge-mixin:0.15.4+mixin.0.8.7",
        "io.github.llamalad7:mixinextras-fabric:0.4.1",
        "eu.pb4:placeholder-api:2.6.3+1.21.5",

        # regular dependencies
        "org.joml:joml:1.10.8",
        "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3",
        "it.unimi.dsi:fastutil:8.5.15",
        "org.jetbrains:annotations:26.0.2",
        "com.h2database:h2:2.3.232",
        "org.antlr:antlr4-runtime:4.13.1",
        "io.github.douira:glsl-transformer:2.0.1",
        "org.anarres:jcpp:1.4.14",
        "com.illposed.osc:javaosc-core:0.8",

        # test dependencies
        "org.jetbrains.kotlin:kotlin-test-junit5:2.1.10",
        "org.junit.jupiter:junit-jupiter-api:5.12.2",
        "org.junit.jupiter:junit-jupiter-engine:5.12.2",
        "org.junit.platform:junit-platform-suite-api:1.12.2",
        "org.junit.platform:junit-platform-suite-engine:1.12.2",
        "org.junit.platform:junit-platform-console:1.12.2",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://maven.fabricmc.net/",
        "https://maven.terraformersmc.com/",
        "https://maven.nucleoid.xyz/",
        "https://masa.dy.fi/maven",
        "https://api.modrinth.com/maven",
    ],
    lock_file = "//:maven_install.json",
)
use_repo(maven, "maven")

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")
http_jar(
    name = "sodium",
    url = "https://cdn.modrinth.com/data/AANobbMI/versions/ND4ROcMQ/sodium-fabric-0.6.13%2Bmc1.21.6.jar",
    sha256 = "2e67812980688bf33447052c9ddfb820d07967bb3a3443f7865687fa0869118d",
    downloaded_file_name = "sodium.jar",
)
http_jar(
    name = "iris",
    url = "https://cdn.modrinth.com/data/YL57xq9U/versions/l77DAK6U/iris-fabric-1.9.1%2Bmc1.21.7.jar",
    sha256 = "0e6bd470311cc938b992e9065e0f94a3f603b68b5dfcde25102c64b8733b69bd",
    downloaded_file_name = "iris.jar",
)
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")
http_file(
    name = "makeup_ultra_fast",
    url = "https://cdn.modrinth.com/data/izsIPI7a/versions/jIWDGbU5/MakeUp-UltraFast-9.2.zip",
    sha256 = "896c7539e17f5604893518fc69f643acc3d492e09ed332b7239623551ed5d309",
    downloaded_file_path = "MakeUp-UltraFast-9.2.zip",
)

minecraft = use_extension("//repo:minecraft_jar.bzl", "minecraft")
minecraft.minecraft_jar(
    version = game_version,
    type = "client",
    assets = True,
    mapping = False,
)
minecraft.minecraft_jar(
    version = game_version,
    type = "server",
    mapping = False,
)
minecraft.exclude_library(names = ["org.ow2.asm:asm:9.6"])
use_repo(minecraft, "minecraft")
use_repo(minecraft, "minecraft_assets")

register_toolchains("//:kotlin_toolchain")
