load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@rules_java//java:defs.bzl", "java_library")
load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("//:properties.bzl", "blazerod_version")
load("//rule:merge_jar.bzl", "merge_jar")
load("//rule:merge_jij.bzl", "merge_jij")

kt_jvm_library(
    name = "blazerod_dep",
    srcs = [],
    resources = [":fabric_mod_json"],
    resource_strip_prefix = "blazerod",
    visibility = ["//visibility:public"],
    exports = [
        "//blazerod/model/model-formats:model-formats_unmerged",
        "//blazerod/render:render_unmapped",
    ],
)

expand_template(
    name = "fabric_mod_json",
    template = "src/main/resources/fabric.mod.json",
    substitutions = {
        "${version}": blazerod_version,
    },
    out = "fabric.mod.json",
)

java_library(
    name = "fabric_mod_json_library",
    resources = [":fabric_mod_json"],
    resource_strip_prefix = "blazerod",
)

alias(
    visibility = ["//visibility:public"],
    name = "icon",
    actual = "src/main/resources/assets/blazerod/icon.png",
)

merge_jar(
    name = "blazerod_merged",
    visibility = ["//visibility:public"],
    deps = [
        ":fabric_mod_json_library",
    ],
    resources = {
        ":icon": "blazerod/src/main/resources/",
    }
)

merge_jij(
    name = "blazerod",
    visibility = ["//visibility:public"],
    input = ":blazerod_merged",
    deps = {
        "//blazerod/model/model-base": "blazerod-model-base:=",
        "//blazerod/model/model-formats": "blazerod-model-formats:=",
        "//blazerod/model/model-gltf": "blazerod-model-formats-gltf:=",
        "//blazerod/model/model-pmd": "blazerod-model-formats-pmd:=",
        "//blazerod/model/model-pmx": "blazerod-model-formats-pmx:=",
        "//blazerod/model/model-vmd": "blazerod-model-formats-vmd:=",
        "//blazerod/render": "blazerod-render:=",
    },
)
