load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("//rule:fabric_mod_json_jar.bzl", "fabric_mod_json_jar")
load("@rules_java//java:defs.bzl", "java_library")
load("//:properties.bzl", "blazerod_version")
load("//rule:merge_jar.bzl", "merge_jar")
load("//rule:merge_jij.bzl", "merge_jij")

java_library(
	name = "icon",
    visibility = ["//visibility:public"],
    resources = ["src/main/resources/assets/blazerod/icon.png"],
    resource_strip_prefix = "blazerod/src/main/resources",
)

fabric_mod_json_jar(
    name = "fabric_mod_json",
    src = "src/main/resources/fabric.mod.json",
    substitutions = {
        "${version}": blazerod_version,
    },
    resource_strip_prefix = "blazerod",
)

kt_jvm_library(
    name = "blazerod_without_jij",
    visibility = ["//visibility:public"],
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    resources = glob(["src/main/resources/**"]),
    resource_strip_prefix = "blazerod/src/main/resources",
    resource_jars = [
        ":fabric_mod_json",
    ],
    exports = [
        "//blazerod/model/model-formats",
        "//blazerod/render:render_unmapped",
    ],
)

merge_jij(
    name = "blazerod",
    visibility = ["//visibility:public"],
    input = ":blazerod_without_jij",
    deps = {
        "//blazerod/model/model-base": "blazerod-model-base:=",
        "//blazerod/model/model-formats": "blazerod-model-formats:=",
        "//blazerod/model/model-gltf": "blazerod-model-formats-gltf:=",
        "//blazerod/model/model-pmd": "blazerod-model-formats-pmd:=",
        "//blazerod/model/model-pmx": "blazerod-model-formats-pmx:=",
        "//blazerod/model/model-vmd": "blazerod-model-formats-vmd:=",
        "//blazerod/render": "blazerod-render:=",
    },
)
